Move inline style

--- a/gapt_client/style.css
+++ b/gapt_client/style.css
@@ -3,6 +3,8 @@ div.clear
     clear: both;
 }
 
+.form-control { width:30%; }
+
 div.product-chooser.disabled div.product-chooser-item
 {
 	zoom: 1;
